# shitKneader-zeroCore

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: test.fs  test.vs
assetsPaths/: CMakeLists.txt  SK_AssetsPaths.h.in
shitKneader/: CMakeLists.txt
shitKneader/Android/: CMakeLists.txt
shitKneader/code/: main.cpp
shitKneader/src/: CMakeLists.txt  main.cpp
src/: main.cpp
zeroCore/: .gitignore  .gitmodules  CMakeLists.txt  ZC_Config.h.in
zeroCore/Android/: AndroidManifest.xml  CMakeLists.txt
zeroCore/Android/AndroidManifest.xml/: AndroidManifest.xml
zeroCore/PC/: CMakeLists.txt
zeroCore/config/: CMakeLists.txt  ZC_Config.h.in
zeroCore/include/: ZC_EL.h  ZC_main.h  ZC_string.h  file.h
zeroCore/include/ZC/: ZC_APIFactory.h  ZC_Noncopyable.h  ZC_OpenGL.h  ZC_Window.h
zeroCore/include/ZC/API/Android/: ZC_API_Android.h  ZC_A_Window.h  ZC_A_main.h
zeroCore/include/ZC/API/PC/: ZC_PC_main.h
zeroCore/include/ZC/API/PC/SDL/: ZC_API_SDL.h  ZC_SDL_OpenGL.h  ZC_SDL_Window.h
zeroCore/include/ZC/ErrorLogger/: ZC_EL_AndroidConsole.h  ZC_EL_Console.h  ZC_EL_Initialize.h  ZC_EL_None.h  ZC_ErroLogger.h  ZC_ErrorLogger.h  ZC_MakeErrorString.h
zeroCore/include/ZC/EventHandler/: ZC_Keyboard.h
zeroCore/include/ZC/Events/Keyboard/: ZC_Keyboard.h  ZC_Keys.h
zeroCore/include/ZC/File/Read/: ZC_FileReader.h
zeroCore/include/ZC/Objects/Camera/: ZC_CameraTwoAxesMove.h
zeroCore/include/ZC/Renderer/: ZC_Buffer.h  ZC_Shader.h  ZC_VAO.h  ZC_VBO.h
zeroCore/include/ZC/SDL/: ZC_API_SDL.h  ZC_SDL_OpenGL.h  ZC_SDL_Window.h
zeroCore/include/ZC/Tools/: ZC_Array.h  ZC_Clock.h  ZC_DynamicArray.h  ZC_Noncopyable.h  ZC_sptr.h  ZC_uptr.h
zeroCore/include/ZC/Tools/Console/: ZC_cout.h
zeroCore/include/ZC/Tools/Exception/: ZC_Exception.h
zeroCore/include/ZC/Tools/Function/: ZC_Function.h  ZC_FunctionHolder.h  ZC_IFunctionHolder.h
zeroCore/include/ZC/Tools/Math/: ZC_Mat.h  ZC_Mat4.h  ZC_MatArithmetic.h  ZC_Vec.h  ZC_Vec3.h  ZC_Vec4.h  ZC_VecArithmetic.h
zeroCore/include/ZC/Tools/Signal/: ZC_Signal.h  ZC_SignalConnection.h  ZC_SignalConnectionShared.h  ZC_SignalConnector.h  ZC_Signals.h  ZC_SignalsConnector.h
zeroCore/include/ZC/Tools/Time/: ZC_Clock.h  ZC_FPS.h
zeroCore/include/ZC/Tools/Tuple/: ZC_TupleGetter.h  ZC_TuppleRef.h
zeroCore/include/ZC/Video/: ZC_Video.h  ZC_Window.h
zeroCore/include/ZC/Video/OpenGL/: ZC_OpenGL.h  ZC_VBO.h
zeroCore/include/ZC/Video/OpenGL/Shader/: ZC_Shader.h  ZC_ShaderCode.h  ZC_ShaderLoader.h
zeroCore/include/ZC/Video/OpenGL/VAO/: ZC_VAO.h  ZC_VAOConfig.h
zeroCore/include/ZC/main/: ZC_main.h
zeroCore/includeVariable/AndroidNativeAppGlue/ZC/Video/: ZC_AndroidNativeAppGlue_Window.h  ZC_android_app.h
zeroCore/includeVariable/AndroidNativeAppGlue/ZC/main/: ZC_AndroidNativeAppGlue_main.h
zeroCore/includeVariable/Audio/ZC/Audio/: ZC_Audio.h  ZC_AudioSet.h  ZC_AudioStream.h  ZC_Sound.h  ZC_SoundData.h  ZC_Sounds.h  ZC_StreamSound.h
zeroCore/src/: CMakeLists.txt  ZC_EL.cpp  file.cpp
zeroCore/src/API/: ZC_API_Initialize.cpp
zeroCore/src/API/Android/: ZC_API_Android.cpp  ZC_A_Window.cpp
zeroCore/src/API/PC/: ZC_PC_main.cpp
zeroCore/src/API/PC/SDL/: ZC_API_SDL.cpp  ZC_SDL_OpenGL.cpp  ZC_SDL_Window.cpp
zeroCore/src/Audio/: ZC_Audio.cpp  ZC_AudioSet.cpp  ZC_AudioStream.cpp  ZC_Sound.cpp  ZC_SoundData.cpp  ZC_Sounds.cpp  ZC_StreamSound.cpp  ZC_WAVHeader.h
zeroCore/src/Audio/Android/oboe/: ZC_oboe_AudioStream.cpp  ZC_oboe_AudioStream.h
zeroCore/src/Audio/PC/SDL/: ZC_SDL_AudioStream.cpp  ZC_SDL_AudioStream.h
zeroCore/src/ErrorLogger/: ZC_EL_AndroidConsole.cpp  ZC_EL_AndroidInitialize.cpp  ZC_EL_Console.cpp  ZC_EL_Initialize.cpp  ZC_EL_Initializer.cpp  ZC_ErroLogger.cpp  ZC_ErrorLogger.cpp  ZC_MakeErrorString.cpp
zeroCore/src/ErrorLogger/Exception/: ZC_ErrorLogger.cpp
zeroCore/src/ErrorLogger/Message/: ZC_ErrorLogger.cpp
zeroCore/src/Event/PC/SDL/: ZC_Event.h
zeroCore/src/File/Read/: ZC_FileReader.cpp
zeroCore/src/File/Read/Android/AndroidNativeAppGlue/: ZC_AndroidNativeAppGlue_FileReader.cpp  ZC_AndroidNativeAppGlue_FileReader.h
zeroCore/src/File/Read/PC/: ZC_MakeAbsolutePath.cpp  ZC_MakeAbsolutePath.h  ZC_PC_FileReader.cpp  ZC_PC_FileReader.h
zeroCore/src/SDL/: ZC_API_SDL.cpp  ZC_SDL_OpenGL.cpp  ZC_SDL_Window.cpp
zeroCore/src/Tools/: ZC_Clock.cpp  ZC_uptrCreateWithErrorCheck.h
zeroCore/src/Tools/Console/Android/AndroidNativeAppGlue/: ZC_cout.cpp
zeroCore/src/Tools/Console/PC/: ZC_cout.cpp
zeroCore/src/Tools/Exception/: ZC_Exception.cpp
zeroCore/src/Tools/Signal/: ZC_SignalConnection.cpp
zeroCore/src/Tools/Time/: ZC_Clock.cpp
zeroCore/src/Video/: ZC_Video.cpp  ZC_Window.cpp
zeroCore/src/Video/Android/AndroidNativeAppGlue/: ZC_AndroidNativeAppGlue_Window.cpp  ZC_android_app.cpp
zeroCore/src/Video/OpenGL/: ZC_OpenGLConfig.cpp  ZC_OpenGLConfig.h  ZC_VBO.cpp
zeroCore/src/Video/OpenGL/PC/SDL/: ZC_SDL_LoadOpenGLFunctions.cpp  ZC_SDL_LoadOpenGLFunctions.h
zeroCore/src/Video/OpenGL/Shader/: ZC_Shader.cpp  ZC_ShaderCode.cpp  ZC_ShaderLoader.cpp
zeroCore/src/Video/OpenGL/VAO/: ZC_VAO.cpp  ZC_VAOConfig.cpp
zeroCore/src/Video/PC/SDL/: ZC_SDL_Window.cpp  ZC_SDL_Window.h
zeroCore/src/ZC/: ZC_Window.cpp
zeroCore/src/ZC/API/Android/: ZC_API_Android.cpp  ZC_A_Window.cpp  ZC_A_main.cpp
zeroCore/src/ZC/API/PC/SDL/: ZC_API_SDL.cpp  ZC_SDL_OpenGL.cpp  ZC_SDL_Window.cpp
zeroCore/src/ZC/ErrorLogger/: ZC_EL_Initialize.cpp
zeroCore/src/ZC/Renderer/: ZC_Buffer.cpp  ZC_Shader.cpp  ZC_VAO.cpp  ZC_VBO.cpp
zeroCore/src/main/PC/: ZC_PC_main.cpp
